// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Load more button Should render button and load items subsequently with SubsequentLoadCount as template property. 1`] = `
<div
  className="arr--button load-more-m__button__GUDhq load-more-m__dark__6EGEv load-more-m__default__mQSXc"
  data-test-id="load-more"
>
  Read More
</div>
`;

exports[`Load more button Should render button and navigate to the corresponding url with NavigateToPage as template property. 1`] = `
<a
  aria-label="load-more"
  data-test-id="load-more"
  href="/"
  onClick={[Function]}
>
  <div
    className="arr--button load-more-m__button__GUDhq load-more-m__dark__6EGEv load-more-m__default__mQSXc"
  >
    Read More
  </div>
</a>
`;
